# treespec

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: build-docker-image.yml  build.yml  code-quality.yml  generate-docs.yml  release-package.yml  source.yml  sphinx.yml  test.yml
docs/: conf.py  conf.rst  datasets.rst  index.rst  models.rst  modules.rst  scripts.rst  treespec.conf.rst  treespec.datasets.rst  treespec.datasets.sauen.rst  treespec.models.rst  treespec.rst  treespec.scripts.rst
docs/source/: conf.py  index.rst
src/: classification_model.py  config.py  run.py  train.py  video_extraction.py
src/conf/: config.py  config.yaml
src/datasets/: sauen_dataset.py
src/datasets/sauen/: sauen_dataset.py
src/models/: classification_model.py  lumberjack.py  video_extraction.py
src/scripts/: extract.py  extract_and_predict.py  train.py
src/treespec/conf/: config.py  config.yaml
src/treespec/datasets/: image_dataset.py
src/treespec/datasets/sauen/: sauen_dataset.py
src/treespec/models/: classification_model.py  lumberjack.py
src/treespec/scripts/: essen_labeler.py  extract_and_predict.py  train.py
test/: classification_model_test.py
test/datasets/: image_dataset_test.py  sauen_dataset_test.py
test/models/: classification_model_test.py  lumberjack_test.py
