[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treespec"
version = "0.1.0"
description = "A project for tree detection and analysis using Detectron2 and PyTorch Lightning."
authors = [
    { name = "Ingmar Vogel", email = "ingmar.vogel@student.hpi.uni-potsdam.de" }
]
license = { text = "MIT" }

dependencies = [
    "torch",
    "torchvision",
    "pytorch-lightning",
    "opencv-python",
    "ffmpeg-python",
    "detectron2 @ git+https://github.com/facebookresearch/detectron2.git"
    "hydra"
    "dataclasses"
]
[project.optional-dependencies]
dev = [
    "black",
    "hypothesis",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-httpserver",
    "types-tqdm",
]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-docsearch",
    "sphinxawesome-theme",
    "sphinx-sitemap",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-katex",
    "sphinxcontrib-napoleon",
    "sphinx_mdinclude",
]


[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src" = ["*.py"]